fix large img moving container on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -140,11 +140,6 @@
   align-items: center;
 }
 
-.idea__img-container.idea__img--large img{
-    width: 30rem;
-    max-width: none;
-    max-height: none;
-}
 
 .idea img {
   object-fit: contain;
